--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">HW04_Gymlog_V3.0.0</string>
+    <string name="enter_a_weight">enter_a_weight</string>
+    <string name="weight">weight</string>
+    <string name="exercise">exercise</string>
+    <string name="reps">reps</string>
+    <string name="log">log</string>
+    <string name="enter_reps">enter_reps</string>
+    <string name="enter_an_exercise">enter_an_exercise</string>
 </resources>
