--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="log">log</string>
     <string name="enter_reps">enter_reps</string>
     <string name="enter_an_exercise">enter_an_exercise</string>
+    <string name="nothing_to_show_time_to_hit_the_gym">nothing_to_show_time_to_hit_the_gym</string>
 </resources>
